<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpquest_dashboard_title">DerpQuest</string>
    <string name="derpquest_title">DerpQuest</string>
    <string name="derp_title">DerpFest Settings</string>
    <string name="animation_title">Animations</string>
    <string name="animation_summary">System animations, qs tile animations</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Jump to camera, swipe to screenshot</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="lockscreen_summary">Fingerprint animation, charging info</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="misc_summary">Pulse, usb configuration</string>
    <string name="navigation_title">Navigation</string>
    <string name="navigation_summary">System gestures, navigation bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Edge lighting, heads-up</string>
    <string name="powermenu_title">Power</string>
    <string name="powermenu_summary">Advanced reboot, hide on lockscreen</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Tile layout, header image, background blur</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_summary">Clock, logo, status icons</string>
    <string name="themes_title">Themes</string>
    <string name="themes_summary">Accent picker, dark theme</string>
    <string name="volume_keys_title">Volume</string>
    <string name="volume_summary">Control music, swap buttons</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="default_string">Default</string>
    <string name="enable_first">Please enable first</string>
    <string name="led_color_green">Green</string>
    <string name="led_color_red">Red</string>
    <string name="edit_hint">Value</string>
    <string name="seek_value_edit_label">Set value</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="qs_footer_category_title">QS footer</string>
    <string name="qs_footer_text_show_title">Show QS footer text</string>
    <string name="qs_footer_text_string_title">Customize footer text</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="volte_icon_miui">MIUI 11 Icon</string>
    <string name="volte_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">Select VoWiFi icon</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="vowifi_icon_simple1">Simple1 Icon</string>
    <string name="vowifi_icon_simple2">Simple2 Icon</string>
    <string name="vowifi_icon_simple3">Simple3 Icon</string>
    <string name="smart_space_title">Google Smart space</string>
    <string name="smart_space_summary">Display conditional info such as weather and events on lockscreen\nRequires a SystemUI restart</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="navbar_tuner_title">Navbar buttons</string>
    <string name="navbar_invert_layout_title">Invert layout</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="qs_columns_rows_category_title">Columns and rows</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="battery_percent_title">Battery indicator</string>
    <string name="battery_percent_summary">Configure icon and text styles for the statusbar battery indicator</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_filled_circle">Filled circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="battery_percentage_title">Battery percentage</string>
    <string name="battery_estimate_title">Battery estimate</string>
    <string name="battery_estimate_summary">Display estimated remaining battery life when available</string>
    <string name="qs_running_services_title">Running Services Icon</string>
    <string name="qs_running_services_summary">Disable the tile running services icon in the footer</string>
    <string name="lock_clock_font_title">Clock font options</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
    <string name="lock_date_font_title">Date font options</string>
    <string name="lock_date_font_summary">Change the default font of the lockscreen date widget</string>
    <string name="lock_date_font_dialog_title">Select lock date font</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Display and customize battery bar near status bar or navigation bar</string>
    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
    <string name="powermenu_advanced_reboot_summary">Enables access to recovery and bootloader</string>
    <string name="brightness_slider_category">Brightness slider</string>
    <string name="qs_show_brightness_slider_title">Quick QS brightness slider</string>
    <string name="qs_show_brightness_slider_summary">Show brightness slider in quickbar</string>
    <string name="qs_show_brightness_slider_expanded_title">Expanded QS brightness slider</string>
    <string name="qs_show_brightness_slider_expanded_summary">Show brightness slider when expanded</string>
    <string name="qs_show_auto_brightness_title">Autobrightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider at bottom (only works for Expanded QS)</string>
    <string name="qs_brightness_position_bottom_summary">Show the brightness slider on bottom of expanded quick settings</string>
    <string name="lockscreen_fingerprint_category">FOD</string>
    <string name="hide_lockicon_title">Hide lock icon</string>
    <string name="hide_lockicon_summary">Hide the lock icon on lockscreen</string>
    <string name="fod_night_light_title">Disable night light when showing FOD</string>
    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. Disabling this option might affect your fingerprint accuracy with night light on</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_date_summary">Customize your statusbar clock and date</string>
    <string name="power_menu_hide_on_secure_title">Hide on lockscreen</string>
    <string name="power_menu_hide_on_secure_summary">Hides the global actions menu on secure lockscreen</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="dtt_category_title">Double tap</string>
    <string name="double_tap_on_doze_to_wake_title">Double-tap to wake on doze</string>
    <string name="double_tap_on_doze_to_wake_summary">Double tap to wake when device is dreaming</string>
    <string name="global_actions_screenshot_title">Screenshot</string>
    <string name="global_actions_screenshot_summary">Add Screenshot toggle to Power Menu</string>
    <string name="global_actions_screenrecord_title">Screen Record</string>
    <string name="global_actions_screenrecord_summary">Add Screen Record toggle to Power Menu</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
    <string name="lockscreen_battery_category">Battery</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="screenshot_category_title">Screenshot</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="qs_datausage_title">Data usage in QS Header</string>
    <string name="qs_media_player_title">QS Media player</string>
    <string name="qs_media_player_summary_on">Show media player in QS.\nRequires a SystemUI restart</string>
    <string name="qs_media_player_summary_off">Show media player as a notification.\nRequires a SystemUI restart</string>
</resources>