<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quicksettings_title">

    <com.derp.support.preference.SystemSettingListPreference
        android:key="qs_datausage"
        android:title="@string/qs_datausage_title"
        android:entries="@array/qs_datausage_entries"
        android:entryValues="@array/qs_datausage_values"
        android:defaultValue="0" />

    <com.derp.support.preference.SecureSettingListPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:defaultValue="1" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="qs_media_player"
        android:title="@string/qs_media_player_title"
        android:summaryOn="@string/qs_media_player_summary_on"
        android:summaryOff="@string/qs_media_player_summary_off"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/lockscreen_battery_category" >

    <com.derp.support.preference.SystemSettingListPreference
        android:key="qs_show_battery_percent"
        android:title="@string/battery_percentage_title"
        android:entries="@array/battery_percent_entries"
        android:entryValues="@array/battery_percent_values"
        android:defaultValue="2" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="qs_show_battery_estimate"
        android:title="@string/battery_estimate_title"
        android:summary="@string/battery_estimate_summary"
        android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/brightness_slider_category" >

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_show_brightness_slider_title"
            android:summary="@string/qs_show_brightness_slider_summary"
            android:defaultValue="false" />

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="qs_show_brightness_slider_show_expanded"
            android:title="@string/qs_show_brightness_slider_expanded_title"
            android:summary="@string/qs_show_brightness_slider_expanded_summary"
            android:defaultValue="true" />

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:dependency="qs_show_brightness_slider_show_expanded"
            android:defaultValue="false" />

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_show_auto_brightness_title"
            android:summary="@string/qs_show_auto_brightness_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_columns_rows_category"
        android:title="@string/qs_columns_rows_category_title" >

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="qs_tile_title_visibility"
            android:title="@string/qs_tile_title_visibility_title"
            android:defaultValue="true" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="5"
            settings:min="1"
            android:defaultValue="3"
            settings:units="" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="5"
            settings:min="1"
            android:defaultValue="1"
            settings:units="" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="7"
            settings:min="1"
            android:defaultValue="4"
            settings:units="" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            settings:min="1"
            android:defaultValue="4"
            settings:units="" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_footer_category"
        android:title="@string/qs_footer_category_title" >

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="qs_footer_text_show"
            android:title="@string/qs_footer_text_show_title"
            android:defaultValue="false" />

        <com.derp.support.preference.SystemSettingEditTextPreference
            android:key="qs_footer_text_string"
            android:title="@string/qs_footer_text_string_title"
            android:dependency="qs_footer_text_show"
            android:defaultValue="#StayDerped" />

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="qs_running_services_toggle"
            android:title="@string/qs_running_services_title"
            android:summary="@string/qs_running_services_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
