<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title">

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="smart_space"
        android:title="@string/smart_space_title"
        android:summary="@string/smart_space_summary"
        android:defaultValue="true" />

    <com.derp.support.preference.SecureSettingSwitchPreference
        android:key="hide_lockicon"
        android:title="@string/hide_lockicon_title"
        android:summary="@string/hide_lockicon_summary"
        android:defaultValue="true" />

    <PreferenceCategory
        android:title="@string/lockscreen_fingerprint_category">

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="fod_gesture"
            android:title="@string/fod_gesture_title"
            android:summary="@string/fod_gesture_summary"
            android:defaultValue="false"
            settings:controller="com.android.settings.security.screenlock.ScreenOffFodPreferenceController" />

        <SwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:persistent="false" />

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="fod_night_light"
            android:title="@string/fod_night_light_title"
            android:summary="@string/fod_night_light_summary"
            android:defaultValue="@*android:bool/disable_fod_night_light"  />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lock_clock_fonts"
        android:title="@string/lock_clock_font_title">

        <ListPreference
            android:key="lock_clock_font_style"
            android:title="@string/lock_clock_font_title"
            android:dialogTitle="@string/lock_clock_font_dialog_title"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:summary="@string/lock_clock_font_summary"
            android:persistent="false" />

        <ListPreference
            android:key="lock_date_fonts"
            android:title="@string/lock_date_font_title"
            android:dialogTitle="@string/lock_date_font_dialog_title"
            android:entries="@array/lock_date_fonts_entries"
            android:entryValues="@array/lock_date_fonts_values"
            android:summary="@string/lock_date_font_summary"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_media_art_options"
        android:title="@string/lockscreen_media_art_options_title">

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/lockscreen_media_art_title"
            android:summary="@string/lockscreen_media_art_summary"
            android:defaultValue="false" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="lockscreen_media_blur"
            android:title="@string/lockscreen_media_blur_title"
            android:dependency="lockscreen_media_metadata"
            settings:allowEditText="true"
            android:max="25"
            android:min="0"
            android:defaultValue="25"
            settings:units="dp"/>

    </PreferenceCategory>

</PreferenceScreen>
