<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar_title">

    <Preference
        android:key="status_bar_icons"
        android:title="@string/status_bar_system_icons_title"
        android:summary="@string/status_bar_system_icons_summary">
        <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
    </Preference>

    <Preference
        android:key="statusbar_battery"
        android:title="@string/battery_percent_title"
        android:summary="@string/battery_percent_summary"
        android:fragment="com.derpquest.settings.fragments.StatusbarBatterySettings"/>

    <Preference
        android:key="statusbar_clock_date"
        android:title="@string/status_bar_clock_date_title"
        android:summary="@string/status_bar_clock_date_summary"
        android:fragment="com.derpquest.settings.fragments.StatusbarClockSettings" />

    <Preference
        android:key="battery_bar_settings"
        android:title="@string/battery_bar_title"
        android:summary="@string/battery_bar_summary" 
        android:fragment="com.derpquest.settings.fragments.BatteryBarSettings"/>

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="show_volte_icon"
        android:title="@string/volte_switch_title"
        android:summary="@string/volte_switch_summary"
        android:defaultValue="true" />

    <com.derp.support.preference.SystemSettingListPreference
        android:key="volte_icon_style"
        android:title="@string/volte_icon_style_title"
        android:entries="@array/volte_icon_type_entries"
        android:entryValues="@array/volte_icon_type_values"
        android:summary="%s"
        android:defaultValue="0"
        android:dependency="show_volte_icon"/>

    <com.derp.support.preference.SystemSettingListPreference
        android:key="vowifi_icon"
        android:title="@string/vowifi_icon_title"
        android:entries="@array/vowifi_icon_entries"
        android:entryValues="@array/vowifi_icon_values"
        android:summary="%s"
        android:defaultValue="0"/>

   <com.derp.support.preference.SystemSettingListPreference
        android:key="vowifi_icon_style"
        android:title="@string/vowifi_icon_style_title"
        android:entries="@array/vowifi_icon_style_entries"
        android:entryValues="@array/vowifi_icon_style_values"
        android:summary="%s"
        android:defaultValue="0"/>

    <PreferenceCategory
        android:key="net_monitor_category"
        android:title="@string/net_monitor_category_title">

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="network_traffic_state"
            android:title="@string/network_traffic_state_title"
            android:summary="@string/network_traffic_state_summary"
            android:defaultValue="true" />

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="network_traffic_state_sb"
            android:title="@string/network_traffic_state_sb_title"
            android:summary="@string/network_traffic_state_sb_summary"
            android:dependency="network_traffic_state"
            android:defaultValue="false" />

        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="network_traffic_autohide_threshold"
            android:title="@string/network_traffic_autohide_threshold_title"
            android:dependency="network_traffic_state"
            android:max="10"
            android:min="0"
            android:defaultValue="1"
            settings:units="" />

    </PreferenceCategory>

</PreferenceScreen>
