<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/gestures_title">

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/screenshot_category_title">

        <com.derp.support.preference.SystemSettingListPreference
            android:key="screenshot_type"
            android:entries="@array/screenshot_type_entries"
            android:entryValues="@array/screenshot_type_values"
            android:title="@string/screenshot_type_title"
            android:defaultValue="0" />

        <com.derp.support.preference.SystemSettingSwitchPreference 
            android:key="three_finger_gesture"
            android:title="@string/three_finger_gesture"
            android:summary="@string/three_finger_gesture_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dtt_category"
        android:title="@string/dtt_category_title">

        <Preference
            android:key="gesture_doubletap_lockscreen"
            android:title="@string/doubletap_lockscreen_screen_title"
            android:summary="@string/doubletap_lockscreen_summary"
            android:fragment="com.android.settings.gestures.DoubleTapLockscreenSettings"
            settings:controller="com.android.settings.gestures.DoubleTapLockscreenPreferenceController" />

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="doze_pulse_on_double_tap"
            android:title="@string/double_tap_on_doze_to_wake_title"
            android:summary="@string/double_tap_on_doze_to_wake_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
